istioify/common/SDMKNY-ServiceEntry.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: auth0-ext
spec:
  hosts:
  - uaa-stage.sdmkny.com
  ports:
  - number: 443
    name: https
    protocol: HTTPS
  resolution: DNS
  location: MESH_EXTERNAL
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: uaa-stage.sdmkny.com
spec:
  hosts:
  - uaa-stage.sdmkny.com
  tls:
  - match:
    - port: 443
      sni_hosts:
      - uaa-stage.sdmkny.com
    route:
    - destination:
        host: uaa-stage.sdmkny.com
        port:
          number: 443
      weight: 100
